[tool.poetry]
name = "scrap-parc-relai"
version = "0.1.0"
description = ""
authors = ["vickrame <vickrame.ujoodha@zenika.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "src/**/*.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
logging = "^0.4.9.6"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
